monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - grafana.junjie.pro
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
